--- a/problem.html
+++ b/problem.html
@@ -38,7 +38,7 @@
   <a href="solutions.html" onclick="w3_close()" class="w3-bar-item w3-button">Our Solution</a>
 </nav>
 <!-- Jordan End -->
-<h1> Why This is a Problem </h1>
+<h1 class="margin24"> Why This is a Problem </h1>
 <p>
 The picture below shows an average map of Canada's and usa's political rideings. This is 
 how most of the pulic sees voting season as.
@@ -55,8 +55,8 @@ But in Reality Blue won.
 <h1>
 How we Plan To Fix This 
 </h1>
-<p>
-
+<p class="padding23">
+  We plan on solving this problem by experimenting with different ideas that will prioritize the population instead of the misleading trait area. our first idea is through color and size where we can represent the winning party in the district with an actual number of votes it got. Second, we wanted to show a dashboard with more information so that they aren't only presented with a map of misleading information. lastly, we wanted to show the data through a 3d plain by making areas with more votes/population taller than the others.
 </p>
 </body>
 </html>
