--- a/solutions.html
+++ b/solutions.html
@@ -38,3 +38,5 @@
   <a href="solutions.html" onclick="w3_close()" class="w3-bar-item w3-button">Our Solution</a>
 </nav>
 <!-- Jordan End -->
+
+<h1 class="margin24"> The Solution </h1>
