--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
   <div class="w3-display-left w3-text-white padding48" >
-    <span class="w3-jumbo w3-hide-small black main-title">How we can fix this problem</span>
-    <span class="w3-xxlarge w3-hide-large w3-hide-medium black main-title">How we can fix this problem</span>
+    <span class="w3-jumbo w3-hide-small black main-title">How We Can Fix This Problem</span>
+    <span class="w3-xxlarge w3-hide-large w3-hide-medium black main-title">How We Can Fix This Problem</span>
     <p class="clear"><a id = "problem" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off" onclick="openModel(this.id)">The Issue</a></p>
     <p class="clear"><a id = "proposal" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off" onclick="openModel(this.id)">Proposal</a></p>
   </div> 
