--- a/solutions.html
+++ b/solutions.html
@@ -38,5 +38,17 @@
   <a href="solutions.html" onclick="w3_close()" class="w3-bar-item w3-button">Our Solution</a>
 </nav>
 <!-- Jordan End -->
-
 <h1 class="margin24"> The Solution </h1>
+<p class="clear float"><a href = "https://storymaps.arcgis.com/stories/b12acac820bf49d0949da4f3b72096d2" class = "w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Story map</a></p>
+<h2> What was Created </h2>
+<ol>
+  <li>Through colour and size</li>
+  <p>We looked at a badly represented map of Ontario's ballot system and looked at it through the area(Figure 1) we then added a new attribute in size by using the total ballots cast creating the map you see below. By looking at these maps we can see that when it area based it looks like the NDP easily won but in reality, the Conservatives won and it was a lot closer race which is much better represented in the map below. </p>
+<li>Map dashboard</li>
+<p>We have created a dashboard that shows a map of votes through Canada in 2021. You can zoom in to see different areas and their votes. </p>
+<li>3D height map</li>
+</ol>
+
+<h1> Methodology</h1>
+
+<h2> How we created these</h2>
