--- a/problem.html
+++ b/problem.html
@@ -53,7 +53,7 @@ But in Reality Blue won.
 <img class= "centre" src="Images/electoralmapmedium.jpg">
 
 <h1>
-How we Plan To Fix This 
+How we Plan to Solve This 
 </h1>
 <p class="padding23">
   We plan on solving this problem by experimenting with different ideas that will prioritize the population instead of the misleading trait area. our first idea is through color and size where we can represent the winning party in the district with an actual number of votes it got. Second, we wanted to show a dashboard with more information so that they aren't only presented with a map of misleading information. lastly, we wanted to show the data through a 3d plain by making areas with more votes/population taller than the others.
