--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <a href="index.html" class="w3-bar-item w3-button"><i class="fa fa-home"></i> Home</a>
       <a href="problem.html" class="w3-bar-item w3-button"> <i class="fa fa-book"></i> The Problem</a>
       <a href="solutions.html" class="w3-bar-item w3-button"><i class="fa fa-users"></i> Our Solution</a>
+      <a href="Methodology.html" class="w3-bar-item w3-button"><i class="fa fa-users"></i> Methodology</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -36,6 +37,7 @@
   <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button">Home</a>
   <a href="problem.html" onclick="w3_close()" class="w3-bar-item w3-button">The Problem</a>
   <a href="solutions.html" onclick="w3_close()" class="w3-bar-item w3-button">Our Solution</a>
+  <a href="Methodology.html" onclick="w3_close()" class="w3-bar-item w3-button">Methodology</a>
 </nav>
 <!-- Jordan End -->
 <!-- Header with full-height image -->
@@ -63,33 +65,33 @@
     <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
       <div class="w3-col l6 m6 w3-margin-bottom">
         <div class="w3-card">
-          <img src="Images/jordan.png" alt="John" style="width:100%">
+          <img class = "width" src="Images/jordan.png" alt="John">
           <div class="w3-container">
             <h3>Jordan Tishler</h3>
             <p class="w3-opacity">Lead</p>
-            <p>Jordan the big boy</p>
+            <p>Jordan, The Project Lead</p>
             <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
           </div>
         </div>
       </div>
       <div class="w3-col l6 m6 w3-margin-bottom">
         <div class="w3-card">
-          <img src="Images/sam.png" alt="Jane" style="width:100%">
+          <img class = "width" src="Images/sam.png" alt="Jane">
           <div class="w3-container">
             <h3>Sam Pethick</h3>
             <p class="w3-opacity">Art Director</p>
-            <p>Sam the artistic boy </p>
+            <p>Sam Lead Chartographer.</p>
             <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
           </div>
         </div>
       </div>
       <div class="w3-col l6 m6 w3-margin-bottom">
         <div class="w3-card">
-          <img src="Images/chris.png" alt="Mike" style="width:100%">
+          <img class = "width" src="Images/chris.png" alt="Mike">
           <div class="w3-container">
-            <h3>Chris Lebert</h3>
+            <h3>kris Lebert</h3>
             <p class="w3-opacity">Knowledge behind the work</p>
-            <p>Chris the swav boy.</p>
+            <p>kris, Lead Database Designer.</p>
             <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
           </div>
         </div>
