--- a/problem.html
+++ b/problem.html
@@ -21,6 +21,7 @@
       <a href="index.html" class="w3-bar-item w3-button"><i class="fa fa-home"></i> Home</a>
       <a href="problem.html" class="w3-bar-item w3-button"> <i class="fa fa-book"></i> The Problem</a>
       <a href="solutions.html" class="w3-bar-item w3-button"><i class="fa fa-users"></i> Our Solution</a>
+      <a href="Methodology.html" class="w3-bar-item w3-button"><i class="fa fa-users"></i> Methodology</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -36,8 +37,10 @@
   <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button">Home</a>
   <a href="problem.html" onclick="w3_close()" class="w3-bar-item w3-button">The Problem</a>
   <a href="solutions.html" onclick="w3_close()" class="w3-bar-item w3-button">Our Solution</a>
+  <a href="Methodology.html" onclick="w3_close()" class="w3-bar-item w3-button">Methodology</a>
 </nav>
 <!-- Jordan End -->
+<div class="margin-left">
 <h1 class="margin24"> Why This is a Problem </h1>
 <p>
 The picture below shows an average map of Canada's and usa's political rideings. This is 
@@ -56,7 +59,8 @@ But in Reality Blue won.
 How we Plan to Solve This 
 </h1>
 <p class="padding23">
-  We plan on solving this problem by experimenting with different ideas that will prioritize the population instead of the misleading trait area. our first idea is through color and size where we can represent the winning party in the district with an actual number of votes it got. Second, we wanted to show a dashboard with more information so that they aren't only presented with a map of misleading information. lastly, we wanted to show the data through a 3d plain by making areas with more votes/population taller than the others.
+We plan on solving this problem by experimenting with different ideas that will prioritize the population instead of using the misleading attribute area. our first idea is through color and size where we can represent the winning party in the district with an actual number of votes it got represented by size. Second, we wanted to show a dashboard with more information so that they aren't only presented with a map of misleading information. lastly, we wanted to show the data through a 3d plain by making areas with more votes/population taller than the others that had a decreased population.
 </p>
 </body>
 </html>
+</div>
