--- a/solutions.html
+++ b/solutions.html
@@ -21,6 +21,7 @@
       <a href="index.html" class="w3-bar-item w3-button"><i class="fa fa-home"></i> Home</a>
       <a href="problem.html" class="w3-bar-item w3-button"> <i class="fa fa-book"></i> The Problem</a>
       <a href="solutions.html" class="w3-bar-item w3-button"><i class="fa fa-users"></i> Our Solution</a>
+      <a href="Methodology.html" class="w3-bar-item w3-button"><i class="fa fa-users"></i> Methodology</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -36,19 +37,23 @@
   <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button">Home</a>
   <a href="problem.html" onclick="w3_close()" class="w3-bar-item w3-button">The Problem</a>
   <a href="solutions.html" onclick="w3_close()" class="w3-bar-item w3-button">Our Solution</a>
+  <a href="Methodology.html" onclick="w3_close()" class="w3-bar-item w3-button">Methodology</a>
 </nav>
 <!-- Jordan End -->
+<div class="margin-left marginbot2">
 <h1 class="margin24"> The Solution </h1>
 <p class="clear float"><a href = "https://storymaps.arcgis.com/stories/b12acac820bf49d0949da4f3b72096d2" class = "w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Story map</a></p>
 <h2> What was Created </h2>
 <ol>
   <li>Through colour and size</li>
-  <p>We looked at a badly represented map of Ontario's ballot system and looked at it through the area(Figure 1) we then added a new attribute in size by using the total ballots cast creating the map you see below. By looking at these maps we can see that when it area based it looks like the NDP easily won but in reality, the Conservatives won and it was a lot closer race which is much better represented in the map below. </p>
-<li>Map dashboard</li>
-<p>We have created a dashboard that shows a map of votes through Canada in 2021. You can zoom in to see different areas and their votes. </p>
+  <img class= "floater marginbot" src="Images/ontario_voting_map.png">
+  <p>We looked at a badly represented map of Ontario's ballot system and looked at it through the area (Figure 1) we then added a new attribute in size by using the total ballots cast creating the map you see below. By looking at these maps we can see that when it is area-based it looks like the NDP (orange) easily won. In reality, the liberals won (red) and it was a lot closer race than it looked. the main votes were actually between the liberals and the conservatives (blue) where the NDP was only third. These areas that had the most population are much better represented in the map below by the areas with bigger circles.   </p>
+  <img class = "width marginbot" src="Images/ontario_voting_mapShape.png">
+  <li>Map dashboard</li>
+<p>We have created a dashboard that shows a map of votes through Canada in 2021. You can zoom in to see different areas and their votes. Additionally, we added two indicators to show the number of valid ballots in the area and the percentage of voter turnout in the area. we also added a list showing electoral district information, a pie graph of the number of votes each party received in each area, and a gauge representing. You are also able to select an electoral district and see all the data associated with it instead of using the zoom feature.</p>
+<img class = "width marginbot" src="Images/Dashboard.png">
 <li>3D height map</li>
+<p> The third thing we created is a 3D height map based on population. on the left we have 2 maps that take in shape area and compare them to the right which is based on population. The population is shown by using a 3d height map making areas with a higher population taller than others.</p>
+<img class = "width marginbot" src="Images/experience.png">
 </ol>
-
-<h1> Methodology</h1>
-
-<h2> How we created these</h2>
+</div>
