--- a/index.html
+++ b/index.html
@@ -139,12 +139,16 @@ function openModel(id) {
     "<p>Most election maps are misleading, and render votes by riding rather than having respect to population which is what drives election results.</p>"+
     "<h3><b>Consequences</b></h3>"+
     "<p>These maps mislead the public about what drives elections, and prevalence of certain parties compared to others.</p>"+
+    "<b><p class = 'small'> *click the X on the top right or anywhere off the paragraph to exit </p></b>"+
     "</div>"
   }
   else if(id == "proposal") {
     document.getElementById("modal-text").innerHTML = "<div class='titled'>"+
     "<h2><b>Our Proposal</b></h2>"+
     "<p>To create an interactive map that displays electoral data from past years, and updates based off of zoom, allowing for both national and local analysis.</p>"+
+    "<h2><b> Products Were Using </b></h2>"+
+    "<p> ArcGIS Online web maps, ArcGIS Story Maps, ArcGIS Dashboards and ArcGIS Experenice Builder.</p>"+
+    "<b> <p class ='small'> *click the X on the top right or anywhere off the paragraph to exit </p></b>"+
     "</div>"    
 }
   modal.style.display = "block";
