--- a/Methodology.html
+++ b/Methodology.html
@@ -19,9 +19,9 @@
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="index.html" class="w3-bar-item w3-button"><i class="fa fa-home"></i> Home</a>
-      <a href="problem.html" class="w3-bar-item w3-button"> <i class="fa fa-book"></i> The Problem</a>
+      <a href="problem.html" class="w3-bar-item w3-button"> <i class="fa fa-exclamation-triangle"></i> The Problem</a>
       <a href="solutions.html" class="w3-bar-item w3-button"><i class="fa fa-users"></i> Our Solution</a>
-      <a href="Methodology.html" class="w3-bar-item w3-button"><i class="fa fa-users"></i> Methodology</a>
+      <a href="Methodology.html" class="w3-bar-item w3-button"><i class="fa fa-cog"></i> Methodology</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
