--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="index.html" class="w3-bar-item w3-button"><i class="fa fa-home"></i> Home</a>
-      <a href="problem.html" class="w3-bar-item w3-button"> <i class="fa fa-book"></i> The Problem</a>
+      <a href="problem.html" class="w3-bar-item w3-button"> <i class="fa fa-exclamation-triangle"></i> The Problem</a>
       <a href="solutions.html" class="w3-bar-item w3-button"><i class="fa fa-users"></i> Our Solution</a>
-      <a href="Methodology.html" class="w3-bar-item w3-button"><i class="fa fa-users"></i> Methodology</a>
+      <a href="Methodology.html" class="w3-bar-item w3-button"><i class="fa fa-cog"></i> Methodology</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -59,10 +59,10 @@
 </header>
 <div class="background2">
 <!-- Team Section -->
-<div class="w3-container" style="padding:128px 16px" id="team">
+<div class="w3-container paddingcorrect" id="team">
     <h3 class="w3-center">Our Team</h3>
     <b><p class="w3-center w3-large">The Boys in The Bax Creek Boys</p></b>
-    <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
+    <div class="w3-row-padding w3-grayscale margin-tops">
       <div class="w3-col l6 m6 w3-margin-bottom">
         <div class="w3-card">
           <img class = "width" src="Images/jordan.png" alt="John">
