--- a/problem.html
+++ b/problem.html
@@ -19,9 +19,9 @@
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="index.html" class="w3-bar-item w3-button"><i class="fa fa-home"></i> Home</a>
-      <a href="problem.html" class="w3-bar-item w3-button"> <i class="fa fa-book"></i> The Problem</a>
+      <a href="problem.html" class="w3-bar-item w3-button"> <i class="fa fa-exclamation-triangle"></i> The Problem</a>
       <a href="solutions.html" class="w3-bar-item w3-button"><i class="fa fa-users"></i> Our Solution</a>
-      <a href="Methodology.html" class="w3-bar-item w3-button"><i class="fa fa-users"></i> Methodology</a>
+      <a href="Methodology.html" class="w3-bar-item w3-button"><i class="fa fa-cog"></i> Methodology</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -40,20 +40,20 @@
   <a href="Methodology.html" onclick="w3_close()" class="w3-bar-item w3-button">Methodology</a>
 </nav>
 <!-- Jordan End -->
-<div class="margin-left">
+<div class="margin-left margin-right">
 <h1 class="margin24"> Why This is a Problem </h1>
 <p>
-The picture below shows an average map of Canada's and usa's political rideings. This is 
+The pictures below show an average map of Canada's and usa's political rideings. This is 
 how most of the pulic sees voting season as.
 </p>
-<img class= "centre" src="Images/canada.png">
-<img class= "centre" src="Images/elctoral.jpg">
+<img class= "width" src="Images/canada.png">
+<img class= "width" src="Images/elctoral.jpg">
 <p>
 The major Problem with this is its shows it mostly based of based on average votes in a provice or state and not through population 
 Why is This a problem: well if we look at a map from 2008 often considered one of the most misleading maps in polical history. It Shows the repulican party (red) massivly out ways the Democrats (blue)
 But in Reality Blue won. 
 </p>
-<img class= "centre" src="Images/electoralmapmedium.jpg">
+<img class= "width" src="Images/electoralmapmedium.jpg">
 
 <h1>
 How we Plan to Solve This 
