--- a/solutions.html
+++ b/solutions.html
@@ -19,9 +19,9 @@
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="index.html" class="w3-bar-item w3-button"><i class="fa fa-home"></i> Home</a>
-      <a href="problem.html" class="w3-bar-item w3-button"> <i class="fa fa-book"></i> The Problem</a>
+      <a href="problem.html" class="w3-bar-item w3-button"> <i class="fa fa-exclamation-triangle"></i> The Problem</a>
       <a href="solutions.html" class="w3-bar-item w3-button"><i class="fa fa-users"></i> Our Solution</a>
-      <a href="Methodology.html" class="w3-bar-item w3-button"><i class="fa fa-users"></i> Methodology</a>
+      <a href="Methodology.html" class="w3-bar-item w3-button"><i class="fa fa-cog"></i> Methodology</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -40,9 +40,10 @@
   <a href="Methodology.html" onclick="w3_close()" class="w3-bar-item w3-button">Methodology</a>
 </nav>
 <!-- Jordan End -->
-<div class="margin-left marginbot2">
+<div class="margin-left marginbot2 margin-right">
 <h1 class="margin24"> The Solution </h1>
 <p class="clear float"><a href = "https://storymaps.arcgis.com/stories/b12acac820bf49d0949da4f3b72096d2" class = "w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Story map</a></p>
+<p class="clear float2"><a href = "storymap.pdf" class = "w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Story map (pdf)</a></p>
 <h2> What was Created </h2>
 <ol>
   <li>Through colour and size</li>
