--- a/Methodology.html
+++ b/Methodology.html
@@ -49,7 +49,7 @@
 <li>Map dashboard</li>
 <p>We created this by getting our data from Open Canada/Canadian government and geo-referencing the data to locate it on ArcGIS Pro. Once the dashboard was created we added an indicator, a gauge, a list, and a pie graph. we then made sure it changed off of zoom and/or select. This made it easy for people to see exact information from exact electoral districts.  Once the dashboard was created we added an indicator, a gauge, a list, and a pie graph. we then made sure it changed off of zoom and/or select. This made it easy for people to see exact information from exact electoral districts.</p>
 <li>3D height map</li>
-<p>we created this by using experience builder. We used a mix of Canadian census population data and electoral districts' total area in Canada.  we then used 2 2Dmaps which showed the difference between area and population based on color where the darker the color the increased number. we then added 2 3d maps to show the same data but with a visual representation of height (example below)</p>
+<p>we created this by using experience builder. We used a mix of Canadian census population data and electoral districts' total area in Canada.  we then used 2 2Dmaps which showed the difference between area and population based on color where the darker the color the increased number. we then added 2 3d maps to show the same data but with a visual representation of height (example below).</p>
 <img src="Images/heightmap.png">
 </ol>
 <h1>
