--- a/index.html
+++ b/index.html
@@ -132,21 +132,21 @@ function openModel(id) {
   console.log(id)
   if(id == "problem") {
     document.getElementById("modal-text").innerHTML = "<div class='titled'>"+
-    "<h2> What we Plan To Solve</h2>"+
+    "<h2> What We're Trying To Solve</h2>"+
     "<h3><b>Ideal</b></h3>"+
-    "<p>Understanding the best way to display election votes on the web in an interactive way, with respect to changes in the electorate over time.</p>"+
+    "<p>Understanding the best way to display election votes on the web in an interactive way, with respect to population instead of area.</p>"+
     "<h3><b>Reality</b></h3>"+
-    "<p>Most election maps are misleading, and render votes by riding rather than having respect to population which is what drives election results.</p>"+
+    "<p>Most election maps are misleading, and render votes by riding and area rather than population. The population is what drives election results.</p>"+
     "<h3><b>Consequences</b></h3>"+
-    "<p>These maps mislead the public about what drives elections, and prevalence of certain parties compared to others.</p>"+
+    "<p>These maps mislead the public about what drives elections and regularly decrease voter turnout each year.</p>"+
     "<b><p class = 'small'> *click the X on the top right or anywhere off the paragraph to exit </p></b>"+
     "</div>"
   }
   else if(id == "proposal") {
     document.getElementById("modal-text").innerHTML = "<div class='titled'>"+
     "<h2><b>Our Proposal</b></h2>"+
-    "<p>To create an interactive map that displays electoral data from past years, and updates based off of zoom, allowing for both national and local analysis.</p>"+
-    "<h2><b> Products Were Using </b></h2>"+
+    "<p>To create an interactive map that displays election data from a previous year, and updates based off of zoom, allowing for both national and local analysis.</p>"+
+    "<h2><b> Products We're Using </b></h2>"+
     "<p> ArcGIS Online web maps, ArcGIS Story Maps, ArcGIS Dashboards and ArcGIS Experenice Builder.</p>"+
     "<b> <p class ='small'> *click the X on the top right or anywhere off the paragraph to exit </p></b>"+
     "</div>"    
