--- a/solutions.html
+++ b/solutions.html
@@ -42,19 +42,19 @@
 <!-- Jordan End -->
 <div class="margin-left marginbot2 margin-right">
 <h1 class="margin24"> The Solution </h1>
-<p class="clear float"><a href = "https://storymaps.arcgis.com/stories/b12acac820bf49d0949da4f3b72096d2" class = "w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Story map</a></p>
-<p class="clear float2"><a href = "storymap.pdf" class = "w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Story map (pdf)</a></p>
-<h2> What was Created </h2>
+<p class="clear float"><a href = "https://storymaps.arcgis.com/stories/b12acac820bf49d0949da4f3b72096d2" class = "w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">StoryMap</a></p>
+<p class="clear float2"><a href = "storymap.pdf" class = "w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">StoryMap (pdf)</a></p>
+<h2> What We Created </h2>
 <ol>
-  <li>Through colour and size</li>
+  <li>Through Colour and Size</li>
   <img class= "floater marginbot" src="Images/ontario_voting_map.png">
-  <p>We looked at a badly represented map of Ontario's ballot system and looked at it through the area (Figure 1) we then added a new attribute in size by using the total ballots cast creating the map you see below. By looking at these maps we can see that when it is area-based it looks like the NDP (orange) easily won. In reality, the liberals won (red) and it was a lot closer race than it looked. the main votes were actually between the liberals and the conservatives (blue) where the NDP was only third. These areas that had the most population are much better represented in the map below by the areas with bigger circles.   </p>
+  <p>We looked at a poorly represented map of Ontario's election results in 2014 and looked at it using area (Figure to the right) we then added a new attribute in size by using the total ballots cast creating the map you see below. By looking at these maps we can see that when it is area-based it looks like the NDP (orange) easily won. In reality, the Liberals won (red) and it was a lot closer race than it looked. the main votes were actually between the Liberals and the Conservatives (blue) where the NDP was only third. These areas that had the most population are much better represented in the map below by the areas with bigger circles.   </p>
   <img class = "width marginbot" src="Images/ontario_voting_mapShape.png">
-  <li>Map dashboard</li>
-<p>We have created a dashboard that shows a map of votes through Canada in 2021. You can zoom in to see different areas and their votes. Additionally, we added two indicators to show the number of valid ballots in the area and the percentage of voter turnout in the area. we also added a list showing electoral district information, a pie graph of the number of votes each party received in each area, and a gauge representing. You are also able to select an electoral district and see all the data associated with it instead of using the zoom feature.</p>
+  <li>Map Dashboard</li>
+<p>We have created a dashboard that shows a map of votes through Canada in 2021. You can zoom in to see different areas and their votes. Additionally, we added two indicators to show the number of valid ballots in the area and the percentage of voter turnout in the area. we also added a list showing electoral district information, a pie graph of the number of votes each party received in each area, and a gauge representing the proportion of the electorate present in the study area. You are also able to select an electoral district and see all the data associated with it instead of using the zoom feature.</p>
 <img class = "width marginbot" src="Images/Dashboard.png">
-<li>3D height map</li>
-<p> The third thing we created is a 3D height map based on population. on the left we have 2 maps that take in shape area and compare them to the right which is based on population. The population is shown by using a 3d height map making areas with a higher population taller than others.</p>
+<li>3D Height Map</li>
+<p> This experience builder was created to investigate the comparison between both 2D maps and 3D scenes with both electoral area and population data. This comparison aims to not only show the differences between area and population layers on maps using color but also the differences between 2D and 3D representations using height. These differences show and compare the strengths and weaknesses of each of these maps and when directly applied to election data, shows which map is less biased. All the maps are synchronized together so that if one moves, they all will follow, and symbology was shared so that they are all visually similar. Experience builder was then used to bring these four maps together on a single page in a dashboard style.</p>
 <img class = "width marginbot" src="Images/experience.png">
 </ol>
 </div>
