--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
    </div>
 </header>
 <div class="background2">
+</div> 
 <!-- Team Section -->
 <div class="w3-container paddingcorrect" id="team">
     <h3 class="w3-center">Our Team</h3>
-    <b><p class="w3-center w3-large">The Boys in The Bax Creek Boys</p></b>
+    <p class="w3-center w3-large"><b>The Boys in The Bax Creek Boys</b></p>
     <div class="w3-row-padding w3-grayscale margin-tops">
       <div class="w3-col l6 m6 w3-margin-bottom">
         <div class="w3-card">
@@ -96,6 +97,8 @@
           </div>
         </div>
       </div>
+    </div>
+</div>
       <script>
         // Modal Image Gallery
         function onClick(element) {
