--- a/problem.html
+++ b/problem.html
@@ -45,12 +45,12 @@
 <p>
   The picture below shows an average map of Canada's and the USA's political ridings during different election periods. This is how most of the public sees the voting season as.
 </p>
-<img class= "width" src="Images/canada.png">
-<img class= "width" src="Images/elctoral.jpg">
+<img class= "width" src="Images/canada.png" alt="canada">
+<img class= "width" src="Images/elctoral.jpg" alt="USA">
 <p>
   The major problem with these maps is that they show the votes based on the winning party in each electoral district or state and not through the population. Why is this a problem? If we look at this map from 2008 it is often considered one of the most misleading maps in political history (Giardino, 2020). It shows the Republican Party (red) massively outweighing the Democratic Party (blue) but in reality, blue won because the areas the Democrats won had significantly more population density. This makes for a largely misinformed public that thinks their votes do not really matter decreasing the overall voter turnout each year. It's often considered that a vote in Wyoming is 3x more important than a vote in Florida just because of the amount of land it covers. (Durran, 2019)
 </p>
-<img class= "width" src="Images/electoralmapmedium.jpg">
+<img class= "width" src="Images/electoralmapmedium.jpg" alt="electoral">
 
 <h1>
 How We Plan to Solve This 
@@ -58,6 +58,6 @@ How We Plan to Solve This
 <p class="padding23">
   We plan on solving this problem by experimenting with different ideas that will prioritize the population instead of using the misleading attribute, area. Our first idea is through color and size where we can represent the winning party in the district with an actual number of votes it got represented by size. Second, we wanted to show a dashboard with more information so that they aren't only presented with a map of misleading information. Lastly, we wanted to show the data through a 3D plain by making areas with more votes/population taller than the others that had a lower population/votes.
 </p>
+</div>
 </body>
 </html>
-</div>
